html set upp, proceed with css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
 </head>
 <body>
   <!-- Your UI below -->
+  <h1></h1>
+  <div class="board">
+    <div class="squares" id="a">text</div>
+    <div class="squares" id="b">text</div>
+    <div class="squares" id="c">text</div>
+    <div class="squares" id="d">text</div>
+    <div class="squares" id="e">text</div>
+    <div class="squares" id="f">text</div>
+    <div class="squares" id="g">text</div>
+    <div class="squares" id="h">text</div>
+    <div class="squares" id="i">text</div>
+  </div>
+  <div class="buttons">
+    <button id="new-game">New Game</button>
+    <button id="give-up">Give Up</button>
+  </div>
 
   <script src="./tic-tac-toe.js"></script>
 </body>
