--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <!-- Your UI below -->
-  <h1></h1>
+  <div class="container">
+  <h1>fake heading</h1>
   <div class="board">
     <div class="squares" id="a">text</div>
     <div class="squares" id="b">text</div>
@@ -24,7 +25,7 @@
     <button id="new-game">New Game</button>
     <button id="give-up">Give Up</button>
   </div>
-
+</div>
   <script src="./tic-tac-toe.js"></script>
 </body>
 </html>
